<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songTitle" />

    <EditText
        android:id="@+id/etNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterSong"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singer" />

    <EditText
        android:id="@+id/etNewSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterSinger"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/etNewYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterYear"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars" />

    <RadioGroup
        android:id="@+id/rgStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/newStar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/newStar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/newStar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/newStar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/newStar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnInsert" />

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnShowList" />
    </LinearLayout>

</LinearLayout>
